syntax = "proto3";


service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// 请求信息
message HelloRequest {
    string name = 1;
}

// 相应信息
message HelloReply {
    string message = 1;
}